--- a/exercice/exercice.html
+++ b/exercice/exercice.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>exercice</title>
-</head>
-<body>
-    <script src="./js/exercice.js"></script>
-</body>
+  </head>
+  <body>
+    <script src="../initiation/JS/exercice.js"></script>
+  </body>
 </html>
