--- a/exercice/1_bonjour.html
+++ b/exercice/1_bonjour.html
@@ -16,6 +16,6 @@
 		<li>Attention à bien respecter les espaces entre les mots dans le message final.</li>
 	</ul>
 
-<!-- <script type="text/javascript" src="1_bonjour.js" ></script> -->
+<script type="text/javascript" src="js/1_bonjour.js" ></script>
 </body>
 </html>
