--- a/exercice/nouvel_exercice7.html
+++ b/exercice/nouvel_exercice7.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="../initiation/JS/nouvel_exercice7.js"></script>
+    <script src="js/fonctions.js"></script>
+    <script src="js/nouvel_exercice7.js"></script>
 </body>
 </html>
