--- a/exercice/11_heure_suivante.html
+++ b/exercice/11_heure_suivante.html
@@ -23,7 +23,7 @@
 
 	<h3>Résultat :</h3>
 
-	<script type="text/javascript" src="11.js"></script>
+	<script type="text/javascript" src="../initiation/JS/11.js"></script>
 </body>
 
 </html>
